# inventory-tauri

./: README.md  create-skeleton.ps1  create_installer.bat  directory.txt  package-lock.json  package.json  tsconfig.json
src/: App.css  App.tsx  main.tsx  router.tsx  styles.css
src-tauri/: .taurignore  Cargo.toml  inno-setup.iss  inventory.db  inventory.db-shm  inventory.db-wal  nsis-installer.nsi  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: auth.rs  lib.rs  main.rs
src-tauri/src/bin_backup/: check_products_query.rs  fix_database_and_restart.rs
src-tauri/src/commands/: auth.rs  category.rs  file.rs  import_export.rs  mod.rs  product.rs  transaction.rs
src-tauri/src/db/: connection.rs  mod.rs  schema.rs  state.rs
src-tauri/src/db/migration/: run_migrations.rs
src-tauri/src/db/migration/2024-03-19-000001_create_users/: up.sql
src-tauri/src/db/migration/2024-03-20-000001_create_categories/: up.sql
src-tauri/src/db/migration/2024-03-20-000002_create_products/: up.sql
src-tauri/src/db/migration/2024-04-01-000001_create_orders/: down.sql  up.sql
src-tauri/src/db/migration/2024-06-14-000001_modify_order_items/: down.sql  up.sql
src-tauri/src/db/migration/2024-06-15-000001_add_price_bought_to_products/: down.sql  up.sql
src-tauri/src/db/migration/2024-06-20-000001_add_icon_to_categories/: down.sql  up.sql
src-tauri/src/db/migration/2024-06-25-000001_add_thumbnail_to_products/: down.sql  up.sql
src-tauri/src/db/migration/2024-06-26-000001_add_barcode_to_products/: down.sql  up.sql
src-tauri/src/db/models/: category.rs  mod.rs  order.rs  product.rs  user.rs
src-tauri/src/models/: auth.rs  category.rs  mod.rs  product.rs
src-tauri/wix/: main.wxs
src/components/: AddCategoryDialog.tsx  AddProductDialog.tsx  CategoryCard.tsx  CategoryCards.tsx  CategoryFormDrawer.css  CategoryFormDrawer.tsx  Header.tsx  InventoryFormDrawer.tsx  NotificationBell.tsx  NotificationDropdown.tsx  NotificationManager.tsx  OrderCategoryCards.tsx  ProductCard.tsx  ProductGrid.tsx  ProductList.tsx  ProtectedRoute.tsx  Sidebar.tsx
src/components/ui/: button.tsx  dialog.tsx  select.tsx  table.tsx  textarea.tsx
src/context/: AuthContext.tsx  NotificationContext.tsx
src/hooks/: useBarcodeScanner.ts  useCategories.ts  useLowStockNotifications.ts  useNotificationTest.ts  useNotifications.ts  useOrders.ts  useProducts.ts
src/pages/: Dashboard.tsx  Inventory.tsx  InventoryReport.tsx  Login.tsx  Logout.tsx  ManageAccess.tsx  Notifications.tsx  Orders.tsx  Profile.tsx  Reports.tsx  Settings.tsx  Staff.tsx  StaffProfile.tsx
src/styles/: CategoryCard.css  Orders.css
src/types/: index.ts  orders.ts
src/utils/: fileUtils.ts  formatters.ts
