[package]
name = "inventory-tauri"
version = "0.1.0"
description = ""
authors = []
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-rc.3", features = [] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# This is the corrected `tauri` dependency with the incorrect features removed.
tauri = { version = "2.0.0-rc.6", features = ["protocol-asset"] }

# All your other dependencies are preserved below.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
rust_decimal = { version = "1.32.0", features = ["serde-with-float"] }
chrono = { version = "0.4.31", features = ["serde"] }
bcrypt = "0.15.0"
jsonwebtoken = "9.2.0"
r2d2 = "0.8.10"
thiserror = "1.0"
rusqlite = { version = "0.36.0", features = ["bundled"] }
tauri-plugin-fs = { version = "2.0.0-rc.6" }
tauri-plugin-shell = { version = "2.0.0-rc.6" }
r2d2_sqlite = "0.29.0"
tauri-plugin-dialog = "2.2.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[package.metadata.tauri]
version = "2.0.0-rc.6"
